--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ FYP-2023.2024.code-workspace
 images
 vendor/Font-Awesome-6.x.zip
 vendor/PHPMailer-master.zip
+fonts/Montserrat.zip
+fonts/Nunito.zip
